--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 body{
-  background-image: url('/src/image/back.jpg');
+  background-image: url('/src/assets/images/ground.png');
+  background-repeat: no-repeat;
+  background-color: #000000;
   display: flex;
   justify-content: center;
   background-size: cover;
@@ -7,39 +9,39 @@ body{
 
 }
 .login-container{
-  height: 400px;
-  width: 400px;
+  height: 300px;
+  width: 300px;
   position: relative;
   top: 170px;
-  background-color: rgba(225,225,225,.3);
-  border: 1px solid #000000;
-  box-shadow: 0px 4px 6px 2px rgba(0,0,0,.3);
+  background-color: rgba(24, 22, 22, 0.3);
+  border: 1px solid #dadada;
+  box-shadow: 0px 4px 6px 2px rgba(255, 253, 253, 0.3);
   z-index: 1;
-  backdrop-filter: blur(1 px); 
-  border-radius: 20px;
+  backdrop-filter: blur(3px); 
+  border-radius: 36px;
 }
 .login-box{
   font-size: 20px;
   text-align: center;
   font-weight: bold;
-  font-family: Verdana, sans-serif;
+  font-family: fot-rodin-pron, sans-serif;
   letter-spacing: -1px;
-  color: rgb(0, 0, 0);
+  color: rgb(187, 187, 187);
 }
 input{
   padding: 10px;
-  margin: 15px;
+  margin: 5px;
   border:none;
   border-radius: 10px;
   background: transparent;
-  border: 2px solid #000000;
+  border: 2px solid rgb(187, 187, 187);
   font-size: 15px;
-  color: black;
+  color: rgb(240, 240, 240);
   outline: none;
-  width: 300px;
+  width: 250px;
   height: 25px;
   position: relative;
-  top: -20px;
+ 
 }
 .remember input{
   display: flex;
@@ -63,15 +65,17 @@ input{
   color:#180a0a
 }
 button{
-  height: 40px;
-  margin: 20px;
-  width: 320px;
-  border-radius: 10px;
-  background-color: #000000;
+  height: 60px;
+  width: 300px;
+  border-radius: 16px;
+  background-color: #00000077;
   color: rgb(255, 255, 255);
+  box-shadow: 0px 4px 6px 2px rgba(255, 253, 253, 0.3);
   font-size: 15px;
-  font-family: Verdana, sans-serif;
-  font-weight: bold;  
+  font-family: fot-rodin-pron, sans-serif;
+  font-weight: bold;
+  position: relative;
+  top: 105px;  
 }
 .login-box p{
   display: flex;
@@ -93,5 +97,19 @@ button{
 }
 
 
+.image-container-right img {
+ max-width: 100%; 
+  max-height: 400px; 
+  object-fit: contain; 
+  margin-left: 335px;
+  margin-top: -262px;
+}
 
+.image-container-left img {
+  max-width: 100%; 
+   max-height: 400px; 
+   object-fit: contain; 
+   margin-left: -335px;
+   margin-top: -262px;
+ }
 
